mails, see password, execution profile

--- a/genius-rating-web/src/main/resources/genius-rating-messages_es.properties
+++ b/genius-rating-web/src/main/resources/genius-rating-messages_es.properties
@@ -1,2 +1,13 @@
 
 common.title = Genius Rating - Sistema de rating gratuito "h\u00E1galo usted mismo".
+
+custom.simpleUser.mail.bye                               = Atentamente, el equipo de GeNius Rating
+custom.simpleUser.mail.hi                                = Hola {0},
+custom.simpleUser.mail.subject.userPassChanged           = Su contrase\u00F1a ha sido modificada con \u00E9xito.
+custom.simpleUser.mail.subject.userPassResetExecuted     = Su contrase\u00F1a ha sido restablecida con \u00E9xito.
+custom.simpleUser.mail.subject.userPassResetRequested    = Petici\u00F3n de restablecimiento de contrase\u00F1a.
+custom.simpleUser.mail.subject.userRegistered            = Su usuario ha sido registrado con \u00E9xito.
+custom.simpleUser.mail.userPassChanged.paragraph1        = Su contrase\u00F1a ha sido modificada con \u00E9xito. Si no ha sido usted quien lo ha hecho, por favor, contacte con nosotros en contact@genius-rating.com
+custom.simpleUser.mail.userPassResetExecuted.paragraph1  = Su contrase\u00F1a ha sido restablecida con \u00E9xito. Si no ha sido usted quien lo ha hecho, por favor, contacte con nosotros en contact@genius-rating.com
+custom.simpleUser.mail.userPassResetRequested.paragraph1 = Atendiendo a su petici\u00F3n, puede restablececer su clave de acceso en la siguiente url: {0}. Si no lo ha solicitado, s\u00EDmplemente ignore este mensaje.
+custom.simpleUser.mail.userRegistered.paragraph1         = Bienvenido a GeNius Rating. Con su apodo "{0}" o correoelectr\u00F3nico "{1}" podr\u00E1 acceder a nuestra web y solicitar y calcular los certificados de rating GeNius que desee para participar en las regatas que lo usen. Muchas gracias por confiar en nosotros.
