Menus & boat tables

--- a/genius-rating-web/src/main/resources/genius-rating-messages_es.properties
+++ b/genius-rating-web/src/main/resources/genius-rating-messages_es.properties
@@ -1,4 +1,17 @@
 
+boat.list.button.del.alt   = Eliminar el barco
+boat.list.button.edit.alt  = Editar el barco
+boat.list.button.pdf.alt   = Obtener copia del certificado de Genius-Rating
+boat.list.button.see.alt   = Consultar el barco
+boat.list.empty            = No se han encontrado barcos
+boat.list.header.boatName  = Nombre
+boat.list.header.buildYear = A\u00F1o
+boat.list.header.loa       = Eslora
+boat.list.header.model     = Modelo
+boat.list.header.rating    = Rating
+boat.list.header.sNumber   = N\u00BA S
+boat.list.header.shipyard  = Astillero
+
 common.title = Genius Rating - Sistema de rating gratuito "h\u00E1galo usted mismo".
 
 custom.simpleUser.mail.bye                               = Atentamente, el equipo de GeNius Rating
